kustomize/bases/hola/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: hola
  template:
    metadata:
      labels:
        app: hola
    spec:
      containers:
      - name: hola
        image: ghcr.io/dtherhtun/web-app-flux:v0.1
        ports:
        - containerPort: 8080
        resources:
            limits:
              cpu: 2000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 32Mi
